Personalize Pixyll theme
- _includes/footer.html: Personalize footer
- _layouts/post.html: Use full URL for 'disqus_identifier' to be
  consistent with Octopress 2
- contact.html: Change title to 'Contact'
- index.html: Add "Read more..." links to excerpted posts
- CSS styling updates

--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -1,8 +1,9 @@
 blockquote {
-  border-left: 5px solid #7a7a7a;
+  border-left: 5px solid #bbb;
   font-style: italic;
   margin-left: $space-1;
   padding: $space-1;
+  background-color: #f6f6f6;
 }
 
 blockquote footer {
