Add asset tags to support octopress/asset-pipeline

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,7 @@
     </small>
   </div>
 </footer>
+{% js_asset_tag %}
 {% if site.enable_anchorjs %}<!-- AnchorJS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.0.0/anchor.min.js"></script>
 <script>
