Personalize Pixyll theme

--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -25,9 +25,11 @@
     {% if site.google_plus_id %}
       <a class="fa fa-google-plus" href="https://plus.google.com/{{ site.google_plus_id }}/posts"></a>
     {% endif %}
+    {% comment %}
     {% if site.email %}
       <a class="fa fa-envelope" href="mailto:{{ site.email }}"></a>
     {% endif %}
+    {% endcomment %}
     {% if site.linkedin_username %}
       <a class="fa fa-linkedin" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"></a>
     {% endif %}
