--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -1,9 +1,8 @@
 blockquote {
-  border-left: 5px solid #bbb;
+  border-left: 5px solid #ddd;
   font-style: italic;
   margin-left: $space-1;
   padding: $space-1;
-  background-color: #f6f6f6;
 }
 
 blockquote footer {
