Stylize excerpt_link

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -20,6 +20,34 @@
   color: #333;
 }
 
+.posts article .post-excerpt-link {
+  font-size: 1rem;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 300;
+  margin-top: 2em;
+
+  a {
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    background: #fafafa;
+    border-radius: 0.1875em;
+    border: 1px solid #f3f3f3;
+    color: #333333;
+    padding: 1em 1.5em;
+  }
+
+  a:hover, a:focus {
+    background: white;
+    color: #477dca;
+  }
+
+  a:active {
+    background: #f7f7f7;
+  }
+}
+
+
 .post-footer {
   @extend .italic;
 
