Stylize linklog (external-url) posts

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -36,7 +36,7 @@
 
 .site-header a:hover,
 .posts .post a:hover .post-meta,
-.posts .post a:hover .post-title,
+.posts .post .post-title a:hover,
 .posts .post a:hover .post-summary {
   opacity: 0.88;
 }
