--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,17 @@ layout: default
 {% if minutes == 0 %}
 {% assign minutes = 1 %}
 {% endif %}
+{% include post_variables.html %}
 
 <div class="post-header mb2">
-  <h1>{{ page.title }}</h1>
+  <h1>
+  {% if linklog %}
+    <span class="linklog-marker">{{ site.linkblog.linkpost.marker }}</span>
+    <a href="{{ page.external-url }}" class="linklog-link">{{ page.title }}</a>
+  {% else %}
+    {{ page.title }}
+  {% endif %}
+  </h1>
   <span class="post-meta">{{ page.date | date: site.date_format }}</span><br>
   {% if page.update_date %}
     <span class="post-meta">{{ site.text.post.updated }}: {{ page.update_date | date: site.date_format }}</span><br>
