--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
     {% if site.fb_page %}<meta property="fb:pages" content="{{ site.fb_page_id }}" />{% endif %}
     {% if page.categories %}<meta name="keywords" content="{{ page.categories | join: ', ' }}">{% endif %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl }}" />
+    <link rel="alternate" type="application/atom" title="{{ site.title }}" href="{{ "/atom.xml" | prepend: site.baseurl }}" />
     <link href="{{ "/favicon.png" | prepend: site.baseurl }}" rel="icon">
 
     <!-- Custom CSS -->
