Fix code-highlight block link styling

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -68,3 +68,7 @@ pre a:last-of-type::before {
 pre a:only-of-type::before {
   padding: 10px;
 }
+
+.code-highlight-caption > a {
+  background-image: none;
+}
