--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -12,7 +12,6 @@
     {% if site.stackoverflow_id %}
       <a class="fa fa-stack-overflow" href="https://stackoverflow.com/users/{{ site.stackoverflow_id }}"></a>
     {% endif %}
-    <a class="fa fa-rss" href="{{ "/atom.xml" | prepend: site.baseurl }}"></a>
     {% if site.twitter_username %}
       <a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"></a>
     {% endif %}
@@ -25,11 +24,6 @@
     {% if site.google_plus_id %}
       <a class="fa fa-google-plus" href="https://plus.google.com/{{ site.google_plus_id }}/posts"></a>
     {% endif %}
-    {% comment %}
-    {% if site.email %}
-      <a class="fa fa-envelope" href="mailto:{{ site.email }}"></a>
-    {% endif %}
-    {% endcomment %}
     {% if site.linkedin_username %}
       <a class="fa fa-linkedin" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"></a>
     {% endif %}
@@ -45,6 +39,19 @@
     {% if site.vk_id %}
       <a class="fa fa-vk" href="https://vk.com/{{ site.vk_id }}"></a>
     {% endif %}
+    {% if site.instagram_username %}
+      <a class="fa fa-instagram" href="https://www.instagram.com/{{ site.instagram_username }}"></a>
+    {% endif %}
+    {% if site.flickr_username %}
+      <a class="fa fa-flickr" href="https://www.flickr.com/photos/{{ site.flickr_username }}"></a>
+    {% endif %}
+    {% if site.lastfm_username %}
+      <a class="fa fa-lastfm" href="https://last.fm/user/{{ site.lastfm_username }}"></a>
+    {% endif %}
+    {% if site.pinboard_username %}
+      <a class="fa fa-thumb-tack" href="https://pinboard.in/u:{{ site.pinboard_username }}"></a>
+    {% endif %}
+    <a class="fa fa-rss" href="{{ "/atom.xml" | prepend: site.baseurl }}"></a>
   </div>
   <div class="right">
     {% if site.bitcoin_url %}
