--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,9 +4,9 @@
 {% for path in page_paths %}
     
     {% assign page = site.pages | where: "path", path | first %}
-    
-    {% if page.title %}
-        <a href="{{ page.url }}">{{ page.title }}</a>
+    {% capture title %}{% if page.nav_title %}{{ page.nav_title }}{% else %}{{ page.title }}{% endif %}{% endcapture %}
+    {% if title %}
+        <a href="{{ page.url }}">{{ title }}</a>
     {% endif %}
 
     
