--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,7 +2,7 @@
 $base-font-size: 14px !default;
 $bold-font-weight: bold !default;
 $font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-$line-height: 1.5 !default;
+$line-height: 1.6 !default;
 $heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
@@ -63,6 +63,7 @@ $breakpoint-xl: '(min-width: 96em)';
 // Whitespace
 $space-1: .5rem !default;
 $space-2: 1rem !default;
+$space-2a: 1.5rem !default;
 $space-3: 2rem !default;
 $space-4: 4rem !default;
 
