--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -15,6 +15,7 @@ a:active {
   border: 0;
   color: $link-hover-color;
   text-decoration: none;
+  @include transition(color 0.2s ease-in-out);
   background-image: linear-gradient(to top,
     rgba(0,0,0,0) 13%,
     rgba($link-hover-color,.8) 13%,
