--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,7 +54,7 @@ $darken-4: rgba(#000,.5) !default;
 
 // Links
 $link-color: $blue;
-$link-hover-color: darken($blue, 40%);
+$link-hover-color: darken($blue, 20%);
 
 // Breakpoints
 $breakpoint-md: '(min-width: 52em)';
@@ -120,3 +120,11 @@ $footer-color: #7a7a7a;
 $footer-bg-color: #fafafa;
 $footer-font-weight: 300;
 $footer-font-size: .75rem;
+
+// Custom Mixins
+@mixin transition($transition){
+     -webkit-transition: $transition;
+     -moz-transition: $transition;
+     -o-transition: $transition;
+     transition: $transition;
+}
