Remove Contact from header_pages

--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -52,6 +52,7 @@
       <a class="fa fa-thumb-tack" href="https://pinboard.in/u:{{ site.pinboard_username }}"></a>
     {% endif %}
     <a class="fa fa-rss" href="{{ "/atom.xml" | prepend: site.baseurl }}"></a>
+    <a class="fa fa-envelope" href="mailto:{{ site.email }}"></a>
   </div>
   <div class="right">
     {% if site.bitcoin_url %}
