--- a/_includes/post_variables.html
+++ b/_includes/post_variables.html
@@ -7,7 +7,8 @@
   {% capture linklog %}{{ post.external-url }}{% endcapture %}
 {% endif %}
 {% if post.url %}{% assign index = true %}{% endif %}
+{% capture excerpted %}{% if post.content contains site.excerpt_separator %}true{% else %}false{% endif %}{% endcapture %}
 {% capture permalink %}{% if index %}{{ post.url | prepend: site.baseurl }}{% else %}{{ page.url | prepend: site.baseurl }}{% endif %}{% endcapture %}
 {% capture title_url %}{% if linklog %}{{ linklog }}{% else %}{{ permalink }}{% endif %}{% endcapture %}
 {% capture article_title %}{% if index %}{% unless linklog %}{{ site.standard_post_marker }}{% endunless %}{{ post.title }}{% else %}{% unless linklog %}{{ site.standard_post_marker }}{% endunless %}{{ page.title }}{% endif %}{% endcapture %}
-{% capture content %}{% if index %}{% capture excerpted %}{{ post.content | has_excerpt }}{% endcapture %}{% if excerpted != 'false' %}{{ post.content | excerpt }}{% else %}{{ post.content }}{% endif %}{% else %}{{ content }}{% endif %}{% endcapture %}
+{% capture content %}{% if index %}{% if excerpted != 'false' %}{{ post.content | excerpt }}{% else %}{{ post.content }}{% endif %}{% else %}{{ content }}{% endif %}{% endcapture %}
