Update outdated hyperlinks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       &copy; {{ 'now' | date: "%Y" }} Tony Duckles.
       Powered by <a href="https://jekyllrb.com/">Jekyll</a>
       and <a href="https://github.com/octopress/octopress">Octopress 3</a>.
-      Theme based on <a href="https://github.com/johnotander/pixyll">Pixyll</a>.
+      Theme based on <a href="https://github.com/johno/pixyll">Pixyll</a>.
     </small>
   </div>
 </footer>
